# advent_of_code

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
1/: Part1.csx
12/: Part1.csx  testInput.txt
13/: Part1.csx
2018/: Readme.md
2018/1/: Part1.csx  Part2.csx
2018/12/: Part2.csx
2018/13/: Part2.csx
2018/2/: Part1.csx  Part2.csx
2018/3/: Part2.csx
2018/4/: Part1.csx  Part2.csx
2018/5/: Part1.csx
2018/7/: Part1.csx  Part2.csx
2019/01/: part1.cpp  part2.cpp
2019/02/: part1.cpp  part2.cpp
2019/03/: part1.cpp  part2.cpp
2019/04/: part1.cpp  part2.cpp
2019/05/: part1.cpp  part2.cpp
2019/06/: part1.cpp  part2.cpp
2019/07/: part1.cpp  part2.cpp
2019/08/: part1.cpp  part2.cpp
2019/09/: part1.cpp  part2.cpp
2019/10/: part1.cpp  part2.cpp
2019/2/: part1.cpp  part2.cpp
2020/01/: part_1.py  part_2.py
2020/02/: part1.py  part2.py  part_1.py  part_2.py
2020/03/: part_1.py  part_2.py
2020/04/: part_1.py  part_2.py
2020/05/: part_1.py  part_2.py
2020/06/: part_1.py  part_2.py
2020/07/: part_1.py  part_2.py
2020/08/: part_1.py  part_2.py
2020/09/: part_1.py  part_2.py
2020/10/: part_1.py  part_2.py
2020/11/: part_1.py  part_2.py
2020/12/: part_1.py  part_2.py
2020/13/: part_1.py  part_2.py
2020/14/: part_1.py  part_2.py
2020/15/: part_1.py  part_2.py
2021/01/: part1.cpp  part2.cpp
2021/02/: part1.cpp  part2.cpp
2022/01/: part1.cpp  part2.cpp
2023/: CMakeLists.txt  CMakePresets.json  cmake-format.yaml  vcpkg.json
2023/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
2023/include/wind/: helpers.hpp
2023/source/day01/: part1.cpp  part2.cpp
2023/source/day02/: part1.cpp  part2.cpp
2023/source/day03/: part1.cpp  part2.cpp
2023/source/day04/: part1.cpp  part2.cpp
2023/source/day05/: part1.cpp  part2.cpp
2023/source/day06/: part1.cpp  part2.cpp
2023_lol/: .clang-format  .gitignore  CMakePresets.json  package-lock.json
2023_lol/source/day01/: part2.cpp
2024/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  vcpkg.json
2024/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
2024/include/wind/: helpers.hpp
2024/source/day01/: part1.cpp  part2.cpp
3/: Part1.csx
5/: Part2.csx
7/: Part1.csx  Part2.csx
cmake/: dev-mode.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: aoc2023_test.cpp
